import React from 'react';
import { mount } from 'enzyme';
import toJson from 'enzyme-to-json';
import { Form } from 'react-final-form';
import ComponentType, { configureContext } from '../renderer-context';

describe('Pf3 <MultipleChoiceList />', () => {
  it('should render correctly', () => {
    expect(true)
  });
});