// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pf3 <MultipleChoiceList /> should render correctly 1`] = `
<FormWrapper>
  <ReactFinalForm
    onSubmit={[MockFunction]}
  >
    <MultipleChoiceList
      component="checkbox-field"
      dataType="string"
      key="multipleChoicesList"
      label="A multiple choices list"
      name="multipleChoicesList"
      options={
        Array [
          Object {
            "label": "foo",
            "value": "foo",
          },
          Object {
            "label": "bar",
            "value": "bar",
          },
          Object {
            "label": "fuzz",
            "value": "fuzz",
          },
          Object {
            "label": "qux",
            "value": "qux",
          },
        ]
      }
      title="A multiple choices list"
      type="checkbox"
      validate={Array []}
    >
      <Field
        component="checkbox-field"
        dataType="string"
        format={[Function]}
        label="A multiple choices list"
        name="multipleChoicesList"
        options={
          Array [
            Object {
              "label": "foo",
              "value": "foo",
            },
            Object {
              "label": "bar",
              "value": "bar",
            },
            Object {
              "label": "fuzz",
              "value": "fuzz",
            },
            Object {
              "label": "qux",
              "value": "qux",
            },
          ]
        }
        parse={[Function]}
        title="A multiple choices list"
        type="checkbox"
        validate={[Function]}
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              className="control-label"
              componentClass="label"
              md={12}
            >
              <label
                className="control-label col-md-12"
              >
                A multiple choices list
              </label>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Field
                  format={[Function]}
                  id="undefined-foo"
                  key="foo"
                  label="foo"
                  name="multipleChoicesList"
                  parse={[Function]}
                  render={[Function]}
                  type="checkbox"
                  value="foo"
                >
                  <Checkbox
                    aria-label="foo"
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    id="undefined-foo"
                    inline={false}
                    label="foo"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    title=""
                    type="checkbox"
                    value="foo"
                  >
                    <div
                      className="checkbox"
                    >
                      <label
                        title=""
                      >
                        <input
                          aria-label="foo"
                          checked={false}
                          disabled={false}
                          id="undefined-foo"
                          label="foo"
                          name="multipleChoicesList"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                          value="foo"
                        />
                        foo
                      </label>
                    </div>
                  </Checkbox>
                </Field>
                <Field
                  format={[Function]}
                  id="undefined-bar"
                  key="bar"
                  label="bar"
                  name="multipleChoicesList"
                  parse={[Function]}
                  render={[Function]}
                  type="checkbox"
                  value="bar"
                >
                  <Checkbox
                    aria-label="bar"
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    id="undefined-bar"
                    inline={false}
                    label="bar"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    title=""
                    type="checkbox"
                    value="bar"
                  >
                    <div
                      className="checkbox"
                    >
                      <label
                        title=""
                      >
                        <input
                          aria-label="bar"
                          checked={false}
                          disabled={false}
                          id="undefined-bar"
                          label="bar"
                          name="multipleChoicesList"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                          value="bar"
                        />
                        bar
                      </label>
                    </div>
                  </Checkbox>
                </Field>
                <Field
                  format={[Function]}
                  id="undefined-fuzz"
                  key="fuzz"
                  label="fuzz"
                  name="multipleChoicesList"
                  parse={[Function]}
                  render={[Function]}
                  type="checkbox"
                  value="fuzz"
                >
                  <Checkbox
                    aria-label="fuzz"
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    id="undefined-fuzz"
                    inline={false}
                    label="fuzz"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    title=""
                    type="checkbox"
                    value="fuzz"
                  >
                    <div
                      className="checkbox"
                    >
                      <label
                        title=""
                      >
                        <input
                          aria-label="fuzz"
                          checked={false}
                          disabled={false}
                          id="undefined-fuzz"
                          label="fuzz"
                          name="multipleChoicesList"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                          value="fuzz"
                        />
                        fuzz
                      </label>
                    </div>
                  </Checkbox>
                </Field>
                <Field
                  format={[Function]}
                  id="undefined-qux"
                  key="qux"
                  label="qux"
                  name="multipleChoicesList"
                  parse={[Function]}
                  render={[Function]}
                  type="checkbox"
                  value="qux"
                >
                  <Checkbox
                    aria-label="qux"
                    bsClass="checkbox"
                    checked={false}
                    disabled={false}
                    id="undefined-qux"
                    inline={false}
                    label="qux"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    title=""
                    type="checkbox"
                    value="qux"
                  >
                    <div
                      className="checkbox"
                    >
                      <label
                        title=""
                      >
                        <input
                          aria-label="qux"
                          checked={false}
                          disabled={false}
                          id="undefined-qux"
                          label="qux"
                          name="multipleChoicesList"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                          value="qux"
                        />
                        qux
                      </label>
                    </div>
                  </Checkbox>
                </Field>
              </div>
            </Col>
          </div>
        </FormGroup>
      </Field>
    </MultipleChoiceList>
  </ReactFinalForm>
</FormWrapper>
`;

exports[`Pf3 <MultipleChoiceList /> should render correctly with error message 1`] = `
<Field
  component="checkbox-field"
  dataType="string"
  format={[Function]}
  label="A multiple choices list"
  name="multipleChoicesList"
  options={
    Array [
      Object {
        "label": "foo",
        "value": "foo",
      },
      Object {
        "label": "bar",
        "value": "bar",
      },
      Object {
        "label": "fuzz",
        "value": "fuzz",
      },
      Object {
        "label": "qux",
        "value": "qux",
      },
    ]
  }
  parse={[Function]}
  title="A multiple choices list"
  type="checkbox"
  validate={[Function]}
>
  <FormGroup
    bsClass="form-group"
    validationState="error"
  >
    <div
      className="form-group has-error"
    >
      <Col
        bsClass="col"
        className="control-label"
        componentClass="label"
        md={12}
      >
        <label
          className="control-label col-md-12"
        >
          A multiple choices list
        </label>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={12}
      >
        <div
          className="col-md-12"
        >
          <Field
            format={[Function]}
            id="undefined-foo"
            key="foo"
            label="foo"
            name="multipleChoicesList"
            parse={[Function]}
            render={[Function]}
            type="checkbox"
            value="foo"
          >
            <Checkbox
              aria-label="foo"
              bsClass="checkbox"
              checked={false}
              disabled={false}
              id="undefined-foo"
              inline={false}
              label="foo"
              name="multipleChoicesList"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              title=""
              type="checkbox"
              value="foo"
            >
              <div
                className="checkbox"
              >
                <label
                  title=""
                >
                  <input
                    aria-label="foo"
                    checked={false}
                    disabled={false}
                    id="undefined-foo"
                    label="foo"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="checkbox"
                    value="foo"
                  />
                  foo
                </label>
              </div>
            </Checkbox>
          </Field>
          <Field
            format={[Function]}
            id="undefined-bar"
            key="bar"
            label="bar"
            name="multipleChoicesList"
            parse={[Function]}
            render={[Function]}
            type="checkbox"
            value="bar"
          >
            <Checkbox
              aria-label="bar"
              bsClass="checkbox"
              checked={false}
              disabled={false}
              id="undefined-bar"
              inline={false}
              label="bar"
              name="multipleChoicesList"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              title=""
              type="checkbox"
              value="bar"
            >
              <div
                className="checkbox"
              >
                <label
                  title=""
                >
                  <input
                    aria-label="bar"
                    checked={false}
                    disabled={false}
                    id="undefined-bar"
                    label="bar"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="checkbox"
                    value="bar"
                  />
                  bar
                </label>
              </div>
            </Checkbox>
          </Field>
          <Field
            format={[Function]}
            id="undefined-fuzz"
            key="fuzz"
            label="fuzz"
            name="multipleChoicesList"
            parse={[Function]}
            render={[Function]}
            type="checkbox"
            value="fuzz"
          >
            <Checkbox
              aria-label="fuzz"
              bsClass="checkbox"
              checked={false}
              disabled={false}
              id="undefined-fuzz"
              inline={false}
              label="fuzz"
              name="multipleChoicesList"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              title=""
              type="checkbox"
              value="fuzz"
            >
              <div
                className="checkbox"
              >
                <label
                  title=""
                >
                  <input
                    aria-label="fuzz"
                    checked={false}
                    disabled={false}
                    id="undefined-fuzz"
                    label="fuzz"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="checkbox"
                    value="fuzz"
                  />
                  fuzz
                </label>
              </div>
            </Checkbox>
          </Field>
          <Field
            format={[Function]}
            id="undefined-qux"
            key="qux"
            label="qux"
            name="multipleChoicesList"
            parse={[Function]}
            render={[Function]}
            type="checkbox"
            value="qux"
          >
            <Checkbox
              aria-label="qux"
              bsClass="checkbox"
              checked={false}
              disabled={false}
              id="undefined-qux"
              inline={false}
              label="qux"
              name="multipleChoicesList"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              title=""
              type="checkbox"
              value="qux"
            >
              <div
                className="checkbox"
              >
                <label
                  title=""
                >
                  <input
                    aria-label="qux"
                    checked={false}
                    disabled={false}
                    id="undefined-qux"
                    label="qux"
                    name="multipleChoicesList"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="checkbox"
                    value="qux"
                  />
                  qux
                </label>
              </div>
            </Checkbox>
          </Field>
        </div>
      </Col>
    </div>
  </FormGroup>
</Field>
`;
